# kilo-cpp

./: CMakeLists.txt  README.md
docs/: 01_project_setup.md  01_setup.md  02_basic_structure.md  02_editor_class.md  03_raw_input_output.md  03_terminal_handling.md  04_text_editing_operation.md  04_text_viewer.md  05_file_io.md  05_text_editor.md  06_search.md  06_syntax_highlighting.md  07_search_functionality.md  07_syntax_highlighting.md  08_conclusion.md  Gemfile  README.md  _config.yml  index.md
docs/_includes/: header.html
docs/_layouts/: base.html  home.html
docs/_posts/: 2025-02-19-welcome-to-jekyll.markdown
include/kilo++/: Editor.hpp  EditorUtils.hpp
src/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorUtils.cpp  TerminalManager.cpp  TerminalManager.hpp  kilo.cpp  main.cpp
